--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -11,10 +11,10 @@ ja:
         current_sign_in_ip: 現在のログインIPアドレス
         email: Eメール
         nickname: ニックネーム
-        first_name: 名字
-        first_name_kana: 名前
-        family_name: 名字(カナ)
-        family_name_kana: 名前(カナ)
+        first_name: 名前
+        first_name_kana: 名前(カナ)
+        family_name: 名字
+        family_name_kana: 名字(カナ)
         birthday: 生年月日
         encrypted_password: 暗号化パスワード
         failed_attempts: 失敗したログイン試行回数
